refactor: streamline WeatherController with minor readability and consistency updates